--- a/actions/update-collection-from-file/package.json
+++ b/actions/update-collection-from-file/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "transform-openapi",
+  "name": "update-collection-from-file",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "axios": "^1.6.0",
-    "openapi-to-postmanv2": "^4.24.0",
-    "postman2openapi": "^1.2.1"
+    "axios": "^1.6.0"
   }
 }
